--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -2,114 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Expense Tracker – Dashboard</title>
+    <title>Dashboard | Expense Tracker</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-<div class="page">
+    <div class="hero-bg"></div>
 
-    <!-- LEFT PANEL / HERO -->
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Financial clarity</h1>
-            <p>Track, analyze, and manage your expenses with confidence.</p>
-        </div>
-    </section>
-
-    <!-- RIGHT PANEL / DASHBOARD -->
-    <section class="auth">
-        <div class="auth-card" style="display:flex;flex-direction:column;gap:32px;overflow:auto;">
-
-            <!-- TOP BAR -->
-            <div class="dashboard-topbar" style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:16px;">
-                <!-- Title -->
-                <div>
-                    <h2 style="margin:0;font-size:22px;">Dashboard</h2>
-                    <p class="muted" style="margin:2px 0 0 0;font-size:13px;">Overview of your finances</p>
-                </div>
-
-                <!-- Profile + Actions -->
-                <div style="display:flex;align-items:center;gap:16px;">
-                    <div style="
-                        width:40px; height:40px; border-radius:50%;
-                        background: linear-gradient(135deg, #FF9F6E, #FF7A3D);
-                        display:flex; align-items:center; justify-content:center;
-                        color:#05070D; font-weight:600; font-size:14px;
-                    ">Y</div>
-                    <div style="display:flex;flex-direction:column;align-items:flex-end;">
-                        <a href="#" style="font-size:13px;color:#FFB17A;margin-bottom:4px;">Logout</a>
-                        <a href="#" style="font-size:13px;color:#FF6B50;">Delete Account</a>
-                    </div>
-                </div>
+    <div class="dashboard-container">
+        
+        <header class="top-bar">
+            <div>
+                <h2>Dashboard</h2>
+                <p style="color:#AAB0BC; font-size:14px;">Welcome back</p>
             </div>
-
-            <!-- DASHBOARD CARDS GRID -->
-            <div class="dashboard-grid" style="
-                display:grid;
-                grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-                gap:24px;
-            ">
-                <!-- Total Spend -->
-                <div style="
-                    background: rgba(18,22,36,0.85);
-                    border-radius:16px; padding:24px;
-                    backdrop-filter: blur(16px);
-                    display:flex; flex-direction:column; justify-content:center;
-                ">
-                    <h3 style="font-size:13px;color:#AAB0BC;">This Month</h3>
-                    <p style="font-size:28px;font-weight:600;margin:6px 0;">₹24,350</p>
-                    <p class="muted small">Total spent</p>
-                </div>
-
-                <!-- Recent Expenses -->
-                <div style="
-                    background: rgba(18,22,36,0.85);
-                    border-radius:16px; padding:24px;
-                    backdrop-filter: blur(16px);
-                    display:flex; flex-direction:column;
-                ">
-                    <h3 style="font-size:13px;color:#AAB0BC;">Recent Expenses</h3>
-                    <div class="muted small" style="margin-top:8px;line-height:1.6;">
-                        <p>• Food – ₹1,200</p>
-                        <p>• Transport – ₹850</p>
-                        <p>• Subscriptions – ₹499</p>
-                    </div>
-                </div>
-
-                <!-- Categories -->
-                <div style="
-                    background: rgba(18,22,36,0.85);
-                    border-radius:16px; padding:24px;
-                    backdrop-filter: blur(16px);
-                    display:flex; flex-direction:column;
-                ">
-                    <h3 style="font-size:13px;color:#AAB0BC;">Categories</h3>
-                    <div class="muted small" style="margin-top:8px;line-height:1.6;">
-                        <p>• Food</p>
-                        <p>• Transport</p>
-                        <p>• Utilities</p>
-                        <p>• Entertainment</p>
-                    </div>
-                </div>
-
-                <!-- Add Expense -->
-                <div style="
-                    display:flex; align-items:center; justify-content:center;
-                    background: rgba(18,22,36,0.85);
-                    border-radius:16px; padding:24px;
-                    backdrop-filter: blur(16px);
-                ">
-                    <button>Add Expense</button>
-                </div>
-
+            <div class="user-profile">
+                <div class="avatar">U</div>
+                <a href="#" id="logoutBtn" class="btn-logout">Logout</a>
             </div>
+        </header>
 
+        <section class="grid-stats">
+            <div class="card">
+                <span class="card-label">Total Spent</span>
+                <span class="card-value" id="totalAmount">₹0.00</span>
+            </div>
+            <div class="card">
+                <span class="card-label">Expenses Count</span>
+                <span class="card-value" id="expenseCount">0</span>
+            </div>
+            <div class="card" style="align-items: center; text-align: center;">
+                <button class="btn-primary" id="openModalBtn">+ Add New Expense</button>
+            </div>
+        </section>
+
+        <section class="card recent-transactions">
+            <div class="list-header">
+                <h3>Recent Expenses</h3>
+            </div>
+            <div class="scroll-area" id="expenseList">
+                <p style="text-align:center; color:#555; margin-top:20px;">Loading expenses...</p>
+            </div>
+        </section>
+
+    </div>
+
+    <div class="modal-overlay" id="expenseModal">
+        <div class="modal">
+            <h3 style="margin-bottom:24px;">Add Expense</h3>
+            <form id="addExpenseForm">
+                <div class="form-group">
+                    <label>Description</label>
+                    <input type="text" id="desc" required placeholder="e.g. Dinner">
+                </div>
+                <div class="form-group">
+                    <label>Amount (₹)</label>
+                    <input type="number" id="amount" required placeholder="0.00">
+                </div>
+                <div class="form-group">
+                    <label>Date</label>
+                    <input type="date" id="date" required>
+                </div>
+                <input type="hidden" id="catId" value="1"> 
+
+                <div class="modal-actions">
+                    <button type="button" class="btn-cancel" id="closeModalBtn">Cancel</button>
+                    <button type="submit" class="btn-primary" style="flex:1;">Save Expense</button>
+                </div>
+            </form>
         </div>
-    </section>
+    </div>
 
-</div>
-
+    <script src="js/api.js"></script>
+    <script src="js/dashboard.js"></script>
 </body>
 </html>
