--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,52 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Expense Tracker – Login</title>
+    <title>Login | Expense Tracker</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-<div class="page">
+<div class="split-screen">
 
-    <!-- HERO -->
-    <section class="hero">
+    <section class="hero-section">
         <div class="hero-content">
-            <h1>Track expenses with clarity</h1>
+            <h1>Track expenses<br>with clarity.</h1>
             <p>
                 A secure, distraction-free platform designed to help you
-                understand where your money goes — without friction.
+                understand where your money goes.
             </p>
         </div>
     </section>
 
-    <!-- AUTH -->
-    <section class="auth">
+    <section class="auth-section">
         <div class="auth-card">
             <h2>Welcome back</h2>
             <p class="muted">Sign in to continue</p>
 
-            <form>
+            <form id="loginForm">
                 <div class="field">
-                    <input type="email" required>
-                    <label>Email</label>
+                    <input type="email" id="email" required placeholder=" ">
+                    <label>Email Address</label>
                 </div>
 
                 <div class="field">
-                    <input type="password" required>
+                    <input type="password" id="password" required placeholder=" ">
                     <label>Password</label>
                 </div>
 
                 <button type="submit">Sign in</button>
             </form>
 
-            <p class="muted" style="margin-top:24px;font-size:13px;">
-                Don’t have an account?
-                <a href="register.html">Click here</a>
+            <p class="muted" style="margin-top:24px; text-align:center;">
+                Don’t have an account? 
+                <a href="register.html" style="color: #FF9F6E;">Register</a>
             </p>
         </div>
     </section>
 
 </div>
 
+<script src="js/api.js"></script>
+<script src="js/auth.js"></script>
 </body>
 </html>
