Refined UI and UX of Expense Tracker System

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,32 @@
     <meta charset="UTF-8">
     <title>Login | Expense Tracker</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💰</text></svg>">
+    <meta name="description"
+        content="Track your daily expenses, analyze spending habits, and manage your budget effortlessly with our professional Expense Tracker dashboard.">
+    <meta name="keywords"
+        content="expense tracker, budget manager, personal finance, money management, spending analysis, financial dashboard">
+    <meta name="author" content="Your Name or Company">
+    <meta name="robots" content="index, follow">
+
+    <meta name="theme-color" content="#05070D">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://your-website-url.com/">
+    <meta property="og:title" content="Expense Tracker - Master Your Money">
+    <meta property="og:description"
+        content="Track, analyze, and optimize your spending habits with our professional dashboard.">
+    <meta property="og:image"
+        content="https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=1200&auto=format&fit=crop">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://your-website-url.com/">
+    <meta property="twitter:title" content="Expense Tracker - Master Your Money">
+    <meta property="twitter:description"
+        content="Track, analyze, and optimize your spending habits with our professional dashboard.">
+    <meta property="twitter:image"
+        content="https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=1200&auto=format&fit=crop">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
